--- a/front-end/src/app/components/filter/filter.component.scss
+++ b/front-end/src/app/components/filter/filter.component.scss
@@ -102,3 +102,14 @@ span {
 .container-fluid {
     position: relative;
 }
+
+.supermarket-icons {
+    display: flex;
+    align-items: center;
+}
+  
+.supermarket-icon {
+    width: 30px;
+    height: 30px;
+    margin-left: 20px; /* Adjust this margin as needed */
+}
