--- a/front-end/src/app/components/footer/footer.component.html
+++ b/front-end/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="container text-center text-md-start mt-5">
             <div class="row mt-3">
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">¿Qué es SoloMercados?</h6>
+                    <h6 class="text-uppercase fw-bold mb-4">Proyecto de título Nicolás Hermosilla</h6>
                     <span>
                         Somos un servicio que busca ayudar a los usuarios a ahorrar dinero
                         en sus compras mensuales, ofreciéndoles una cómoda y simple forma de
@@ -13,14 +13,14 @@
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
                     <span>
-                        solomercados@gmail.com
+                        nicolashermosilla56@gmail.com
                     </span>
                 </div>
             </div>
         </div>
     </section>
     <div class="copyright text-center p-4">
-        © 2022 Copyright:
-        <a class="text-reset fw-bold" href="/">SoloMercados.com</a>
+        © 2023 Copyright:
+        <a class="text-reset fw-bold" href="/">SoloMercados</a>
     </div>
 </footer>
