--- a/front-end/src/app/components/list-products/list-products.component.html
+++ b/front-end/src/app/components/list-products/list-products.component.html
@@ -1,4 +1,34 @@
 <div class="container-fluid">
+    <h1>Última actualización de la base de datos: 29/10/2023</h1>
+    <h2 class="px-5 py-1">COTIZACIONES SUGERIDAS</h2>
+    <!-- Template Carts -->
+    <div class="row justify-content-md-center">
+        <!-- Template Cart 1 -->
+        <div class="card card-products col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Cotizacion sugerida por $50.000</h5>
+                <button class="btn btn-primary justify-content-center" (click)="addProductsToCart(17)">Agregar al carrito</button>
+            </div>
+        </div>        
+
+        <!-- Template Cart 2 -->
+        <div class="card card-products col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Cotizacion sugerida por $75.000</h5>
+                <button class="btn btn-primary justify-content-center" (click)="addProductsToCart(19)">Agregar al carrito</button>
+            </div>
+        </div>
+
+        <!-- Template Cart 3 -->
+        <div class="card card-products col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Cotizacion sugerida por $100.000</h5>
+                <button class="btn btn-primary justify-content-center" (click)="addProductsToCart(20)">Agregar al carrito</button>
+            </div>
+        </div>
+    </div>
+
+<div class="container-fluid">
     <h2 class="px-5 py-1">DESTACADOS</h2>
     <div class="row justify-content-md-center">
         <div *ngFor="let producto of ListaProductos" class="card card-products col-sm-12 col-md-6 col-lg-4 col-xl-4">
@@ -6,6 +36,15 @@
                 <a [routerLink]="['/details', producto.id_producto]" routerLinkActive="router-link-active">
                     <img src="{{producto.imagen}}" class="card-img-top" alt="{{producto.nombre}}" (error) ="onImgError($event)">
                 </a>
+            </div>
+            <div class="availability">
+                
+                <div class="supermarket-icons">
+                    <!--<p>Disponible en:</p>-->
+                    <div *ngFor="let supermarket of producto.supermarkets">
+                        <img [src]="supermarket.logo" class="supermarket-icon" alt="{{supermarket.supermercado}}">
+                    </div>
+                </div>
             </div>
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{producto.nombre}}</h5>
